# storage/api-docs/api-docs.json
@@ -360,6 +360,140 @@
                 }
             }
         },
+        "/api/master_dig_tech/videos": {
+            "get": {
+                "tags": [
+                    "Master Digital Technologies"
+                ],
+                "summary": "Все видео",
+                "description": "Returns a collection of video resources filtered by project ID 3.",
+                "operationId": "5834f42ea28bf722ae58001d9d80ff25",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No videos found for the specified project",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/master_dig_tech/videos/{id}": {
+            "get": {
+                "tags": [
+                    "Master Digital Technologies"
+                ],
+                "summary": "Видео по ID",
+                "description": "Returns a video resource for the specified ID.",
+                "operationId": "ea835268fcac3784d8ad1097c61a4ab3",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the video record",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Video record not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/master_dig_tech/images": {
+            "get": {
+                "tags": [
+                    "Master Digital Technologies"
+                ],
+                "summary": "Все фото",
+                "description": "Returns a collection of image resources filtered by project ID 3.",
+                "operationId": "98e57f1a8607f5872a1a1f9cb6515aec",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No images found for the specified project",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/master_dig_tech/images/{id}": {
+            "get": {
+                "tags": [
+                    "Master Digital Technologies"
+                ],
+                "summary": "Фото по ID",
+                "description": "Returns a image for the specified ID.",
+                "operationId": "fcfd8195c180cbce022f0780ea564b15",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the image",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Image not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/blog/posts": {
             "get": {
                 "tags": [
@@ -430,6 +564,10 @@
         {
             "name": "Amina",
             "description": "Amina"
+        },
+        {
+            "name": "Master Digital Technologies",
+            "description": "Master Digital Technologies"
         },
         {
             "name": "Posts",
